--- a/src/SalesOrderWpf.UI/MainWindow.xaml
+++ b/src/SalesOrderWpf.UI/MainWindow.xaml
@@ -7,6 +7,18 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
+        <GridSplitter Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="3" Background="#FF82A6C9"></GridSplitter>
+        <GridSplitter Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="3" Background="#FF82A6C9"></GridSplitter>
+        <DataGrid Margin="10"/>
+        <DataGrid Margin="10" Grid.Row="1"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="10,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.244,0.674"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="707,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="627,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="547,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
