--- a/src/SalesOrderWpf.UI/App.xaml
+++ b/src/SalesOrderWpf.UI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SalesOrderWpf.UI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="OrdersForm.xaml">
     <Application.Resources>
          
     </Application.Resources>
