--- a/src/SalesOrderWpf.UI/MainWindow.xaml
+++ b/src/SalesOrderWpf.UI/MainWindow.xaml
@@ -14,8 +14,8 @@
         </Grid.RowDefinitions>
         <GridSplitter Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="3" Background="#FF82A6C9"></GridSplitter>
         <GridSplitter Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="3" Background="#FF82A6C9"></GridSplitter>
-        <DataGrid Margin="10"/>
-        <DataGrid Margin="10" Grid.Row="1"/>
+        <DataGrid x:Name="gridOrders" Margin="10"/>
+        <DataGrid x:Name="gridLines" Margin="10" Grid.Row="1"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="10,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.244,0.674"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="707,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="627,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
