--- a/src/SalesOrderWpf.UI/ItemForm.xaml
+++ b/src/SalesOrderWpf.UI/ItemForm.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SalesOrderWpf.UI.LineForm"
+﻿<Window x:Class="SalesOrderWpf.UI.ItemForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SalesOrderWpf.UI"
         mc:Ignorable="d"
-        Title="Item" Height="402" Width="585.5">
+        Title="Item" Height="402" Width="585.5" Topmost="True" WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel Height="163" Margin="10,10,10,0" VerticalAlignment="Top">
             <TextBlock TextWrapping="Wrap" Text="Código"/>
@@ -18,7 +18,8 @@
             <TextBox x:Name="txtPrice" Height="22" TextWrapping="Wrap" Text=""/>
         </StackPanel>
         <TextBlock Margin="0,0,140,14" TextWrapping="Wrap" Text="Total:" HorizontalAlignment="Right" Width="28" Height="16" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="txtLineTotal" Margin="0,0,10,10" TextWrapping="Wrap" Text="" HorizontalAlignment="Right" Width="120" Height="24" VerticalAlignment="Bottom"/>
-        <Button x:Name="cmdOk" Content="OK" HorizontalAlignment="Left" Margin="10,341,0,0" VerticalAlignment="Top" Width="74" Click="CmdOk_Click"/>
+        <TextBox x:Name="txtLineTotal" Margin="0,0,10,10" TextWrapping="Wrap" IsReadOnly="True" Text="" HorizontalAlignment="Right" Width="120" Height="24" VerticalAlignment="Bottom"/>
+        <Button x:Name="cmdOk" Content="OK" HorizontalAlignment="Left" Margin="10,0,0,10" Width="74" Click="CmdOk_Click" RenderTransformOrigin="0.494,-0.195" Height="20" VerticalAlignment="Bottom"/>
+        <Button x:Name="btnCancel" Content="Cancelar" HorizontalAlignment="Left" Margin="89,0,0,9" Width="75" Click="BtnCancel_Click" Height="20" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
